--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/image_description"
-        app:srcCompat="@drawable/photo" />
+        android:contentDescription="@string/image_description" />
 
     <TextView
         android:id="@+id/text_view"
@@ -31,20 +29,17 @@
         <RadioButton
             android:id="@+id/radioButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/everest" />
+            android:layout_height="wrap_content" />
 
         <RadioButton
             android:id="@+id/radioButton2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tatry" />
+            android:layout_height="wrap_content" />
 
         <RadioButton
             android:id="@+id/radioButton3"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/wielka_racza" />
+            android:layout_height="wrap_content" />
     </RadioGroup>
 
     <LinearLayout
